--- a/content/intro.ipynb
+++ b/content/intro.ipynb
@@ -9,7 +9,7 @@
     "To get started, you may be interested in the following links.\n",
     "Here are a few links of interest:\n",
     "\n",
-    "* **[Quickstart](features/features)** is a quick demo and overview of Jupyter Books.\n"
+    "* **[Quickstart](features/notebooks)** is a quick demo and overview of Jupyter Books.\n"
    ]
   }
  ],
