--- a/content/Prerequisites/pre.ipynb
+++ b/content/Prerequisites/pre.ipynb
@@ -426,6 +426,25 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "<div class=\"alert alert-success\" role=\"alert\">\n",
+    "  A simple success alert—check it out!\n",
+    "</div>\n",
+    "<div class=\"alert alert-danger\" role=\"alert\">\n",
+    "  A simple danger alert—check it out!\n",
+    "</div>\n",
+    "<div class=\"alert alert-warning\" role=\"alert\">\n",
+    "  A simple warning alert—check it out!\n",
+    "</div>\n",
+    "<div class=\"alert alert-info\" role=\"alert\">\n",
+    "  A simple info alert—check it out!\n",
+    "</div>\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
